@@ -20,7 +20,6 @@ import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
 import io.trino.metadata.ResolvedFunction;
 import io.trino.metadata.TestingFunctionResolution;
-import io.trino.spi.connector.SortOrder;
 import io.trino.sql.ir.Reference;
 import io.trino.sql.planner.OrderingScheme;
 import io.trino.sql.planner.Symbol;
@@ -33,15 +32,18 @@ import io.trino.sql.planner.plan.WindowNode;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Predicate;
 
 import static com.google.common.base.Predicates.alwaysTrue;
 import static com.google.common.collect.ImmutableList.toImmutableList;
+import static io.trino.spi.connector.SortOrder.ASC_NULLS_FIRST;
 import static io.trino.spi.type.BigintType.BIGINT;
 import static io.trino.sql.analyzer.TypeSignatureProvider.fromTypes;
 import static io.trino.sql.planner.assertions.PlanMatchPattern.expression;
+import static io.trino.sql.planner.assertions.PlanMatchPattern.sort;
 import static io.trino.sql.planner.assertions.PlanMatchPattern.strictProject;
 import static io.trino.sql.planner.assertions.PlanMatchPattern.values;
 import static io.trino.sql.planner.assertions.PlanMatchPattern.window;
@@ -49,6 +51,8 @@ import static io.trino.sql.planner.assertions.PlanMatchPattern.windowFunction;
 import static io.trino.sql.planner.plan.FrameBoundType.CURRENT_ROW;
 import static io.trino.sql.planner.plan.FrameBoundType.UNBOUNDED_PRECEDING;
 import static io.trino.sql.planner.plan.WindowFrameType.RANGE;
+import static io.trino.sql.tree.SortItem.NullOrdering.FIRST;
+import static io.trino.sql.tree.SortItem.Ordering.ASCENDING;
 import static io.trino.type.UnknownType.UNKNOWN;
 
 public class TestPruneWindowColumns
@@ -57,7 +61,7 @@ public class TestPruneWindowColumns
     private static final ResolvedFunction MIN_FUNCTION = new TestingFunctionResolution().resolveFunction("min", fromTypes(BIGINT));
 
     private static final List<String> inputSymbolNameList =
-            ImmutableList.of("orderKey", "partitionKey", "hash", "startValue1", "startValue2", "endValue1", "endValue2", "input1", "input2", "unused");
+            ImmutableList.of("orderKey", "partitionKey", "hash", "startValue1", "startValue2", "endValue1", "endValue2", "input1", "input2", "aggOrderInput1", "aggOrderInput2", "unused");
     private static final Set<String> inputSymbolNameSet = ImmutableSet.copyOf(inputSymbolNameList);
 
     private static final WindowNode.Frame FRAME1 = new WindowNode.Frame(
@@ -106,13 +110,13 @@ public class TestPruneWindowColumns
                                                 .specification(
                                                         ImmutableList.of("partitionKey"),
                                                         ImmutableList.of("orderKey"),
-                                                        ImmutableMap.of("orderKey", SortOrder.ASC_NULLS_FIRST))
+                                                        ImmutableMap.of("orderKey", ASC_NULLS_FIRST))
                                                 .preSortedOrderPrefix(0)
-                                                .addFunction("output2", windowFunction("min", ImmutableList.of("input2"), FRAME2))
+                                                .addFunction("output2", windowFunction("min", ImmutableList.of("input2"), FRAME2, List.of(sort("aggOrderInput2", ASCENDING, FIRST))))
                                                 .hashSymbol("hash"),
                                         strictProject(
                                                 Maps.asMap(
-                                                        Sets.difference(inputSymbolNameSet, ImmutableSet.of("input1", "startValue1", "endValue1")),
+                                                        Sets.difference(inputSymbolNameSet, ImmutableSet.of("input1", "startValue1", "endValue1", "aggOrderInput1")),
                                                         symbol -> expression(new Reference(BIGINT, symbol))),
                                                 values(inputSymbolNameList)))));
     }
@@ -158,10 +162,10 @@ public class TestPruneWindowColumns
                                                 .specification(
                                                         ImmutableList.of("partitionKey"),
                                                         ImmutableList.of("orderKey"),
-                                                        ImmutableMap.of("orderKey", SortOrder.ASC_NULLS_FIRST))
+                                                        ImmutableMap.of("orderKey", ASC_NULLS_FIRST))
                                                 .preSortedOrderPrefix(0)
-                                                .addFunction("output1", windowFunction("min", ImmutableList.of("input1"), FRAME1))
-                                                .addFunction("output2", windowFunction("min", ImmutableList.of("input2"), FRAME2))
+                                                .addFunction("output1", windowFunction("min", ImmutableList.of("input1"), FRAME1, List.of(sort("aggOrderInput1", ASCENDING, FIRST))))
+                                                .addFunction("output2", windowFunction("min", ImmutableList.of("input2"), FRAME2, List.of(sort("aggOrderInput2", ASCENDING, FIRST))))
                                                 .hashSymbol("hash"),
                                         strictProject(
                                                 Maps.asMap(
@@ -184,10 +188,13 @@ public class TestPruneWindowColumns
         Symbol endValue2 = p.symbol("endValue2");
         Symbol input1 = p.symbol("input1");
         Symbol input2 = p.symbol("input2");
+        Symbol aggOrderInput1 = p.symbol("aggOrderInput1");
+        Symbol aggOrderInput2 = p.symbol("aggOrderInput2");
         Symbol unused = p.symbol("unused");
         Symbol output1 = p.symbol("output1");
         Symbol output2 = p.symbol("output2");
-        List<Symbol> inputs = ImmutableList.of(orderKey, partitionKey, hash, startValue1, startValue2, endValue1, endValue2, input1, input2, unused);
+
+        List<Symbol> inputs = ImmutableList.of(orderKey, partitionKey, hash, startValue1, startValue2, endValue1, endValue2, input1, input2, aggOrderInput1, aggOrderInput2, unused);
         List<Symbol> outputs = ImmutableList.<Symbol>builder().addAll(inputs).add(output1, output2).build();
 
         return p.project(
@@ -200,12 +207,13 @@ public class TestPruneWindowColumns
                                 ImmutableList.of(partitionKey),
                                 Optional.of(new OrderingScheme(
                                         ImmutableList.of(orderKey),
-                                        ImmutableMap.of(orderKey, SortOrder.ASC_NULLS_FIRST)))),
+                                        ImmutableMap.of(orderKey, ASC_NULLS_FIRST)))),
                         ImmutableMap.of(
                                 output1,
                                 new WindowNode.Function(
                                         MIN_FUNCTION,
                                         ImmutableList.of(input1.toSymbolReference()),
+                                        Optional.of(new OrderingScheme(List.of(aggOrderInput1), Map.of(aggOrderInput1, ASC_NULLS_FIRST))),
                                         new WindowNode.Frame(
                                                 RANGE,
                                                 UNBOUNDED_PRECEDING,
@@ -219,6 +227,7 @@ public class TestPruneWindowColumns
                                 new WindowNode.Function(
                                         MIN_FUNCTION,
                                         ImmutableList.of(input2.toSymbolReference()),
+                                        Optional.of(new OrderingScheme(List.of(aggOrderInput2), Map.of(aggOrderInput2, ASC_NULLS_FIRST))),
                                         new WindowNode.Frame(
                                                 RANGE,
                                                 UNBOUNDED_PRECEDING,
